@@ -132,3 +132,10 @@ on=On
 tab.introduction=Introduction
 tab.friction=Friction
 tab.trackPlayground=Track Playground
+
+#Basics
+skater.mass=Skater Mass
+small = Small
+large = Large
+slow.motion=Slow Motion
+normal=Normal
