@@ -10,6 +10,7 @@ import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
 import edu.colorado.phet.common.piccolophet.nodes.slider.simsharing.SimSharingHSliderNode;
+import edu.colorado.phet.energyskatepark.EnergySkateParkResources;
 import edu.colorado.phet.energyskatepark.model.EnergySkateParkModel;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PText;
@@ -24,7 +25,7 @@ public class MassControl extends PNode {
         //Control box for track friction
         final int MIN_MASS = 60;
         final int MAX_MASS = 100;
-        addChild( new VBox( 10, new PhetPText( "Skater Mass", EnergySkateParkBasicsModule.TITLE_FONT ),
+        addChild( new VBox( 10, new PhetPText( EnergySkateParkResources.getString( "skater.mass" ), EnergySkateParkBasicsModule.TITLE_FONT ),
                             new SimSharingHSliderNode( skaterMassSlider, MIN_MASS, MAX_MASS, 90, 5, module.mass, new Property<Boolean>( true ) ) {
 
                                 @Override protected Paint getTrackFillPaint( Rectangle2D trackRect ) {
@@ -34,8 +35,8 @@ public class MassControl extends PNode {
                                 }
 
                                 {
-                                    addLabel( min, new PText( "Small" ) );
-                                    addLabel( max, new PText( "Large" ) );
+                                    addLabel( min, new PText( EnergySkateParkResources.getString( "small" ) ) );
+                                    addLabel( max, new PText( EnergySkateParkResources.getString( "large" ) ) );
                                 }
                             } ) );
 
