@@ -11,6 +11,7 @@ import edu.colorado.phet.common.piccolophet.RichPNode;
 import edu.colorado.phet.common.piccolophet.nodes.layout.HBox;
 import edu.colorado.phet.common.piccolophet.nodes.mediabuttons.PiccoloClockControlPanel;
 import edu.colorado.phet.energyskatepark.AbstractEnergySkateParkModule;
+import edu.colorado.phet.energyskatepark.EnergySkateParkResources;
 import edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing;
 import edu.umd.cs.piccolox.pswing.PSwing;
 
@@ -48,10 +49,10 @@ public class EnergySkateParkTimeControlPanel extends RichPNode {
             }
         } );
 
-        addChild( new HBox( new PSwing( new SimSharingPropertyRadioButton<Boolean>( EnergySkateParkSimSharing.UserComponents.slowMotionRadioButton, "Slow Motion", module.normalSpeed, false ) {{
+        addChild( new HBox( new PSwing( new SimSharingPropertyRadioButton<Boolean>( EnergySkateParkSimSharing.UserComponents.slowMotionRadioButton, EnergySkateParkResources.getString( "slow.motion" ), module.normalSpeed, false ) {{
             setBackground( new Color( 0, 0, 0, 0 ) );
             setFont( new PhetFont( 16 ) );
-        }} ), new PSwing( new SimSharingPropertyRadioButton<Boolean>( EnergySkateParkSimSharing.UserComponents.normalSpeedRadioButton, "Normal", module.normalSpeed, true ) {{
+        }} ), new PSwing( new SimSharingPropertyRadioButton<Boolean>( EnergySkateParkSimSharing.UserComponents.normalSpeedRadioButton, EnergySkateParkResources.getString( "normal" ), module.normalSpeed, true ) {{
             setBackground( new Color( 0, 0, 0, 0 ) );
             setFont( new PhetFont( 16 ) );
         }} ), new PSwing( controlPanel ) ) );
